--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <script src="script.js"></script>
+    <title>FoggyDude Home!</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <img src="images/hog.jpg" alt="hog">
+    <div id="star-container">
+        <div id="star-pattern"></div>
+        <div id="star-gradient-overlay"></div>
+    </div>
 </body>
 </html>
