--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div id="star-container">
-        <div id="star-pattern"></div>
-        <div id="star-gradient-overlay"></div>
+    <div id="tile-container">
+        <div id="tile-pattern"></div>
+        <div id="gradient-overlay"></div>
+    </div>
+    <div id="mainstuff">
+        Hello guys welcome to my site
     </div>
 </body>
 </html>
