This is looking good

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="splitting/splitting.css">
+    <script src="splitting/splitting.js"></script>
 </head>
 <body>
     <div id="tile-container">
@@ -12,16 +14,12 @@
         <div id="gradient-overlay"></div>
     </div>
     <div id="mainstuff">
-        <center><h2>Hello guys welcome to my site</h2></center>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras urna arcu, posuere non dictum eu, eleifend quis dui. Donec sit amet tellus sollicitudin ante consequat ultricies scelerisque non felis. Maecenas aliquam massa vel rutrum feugiat. Sed tincidunt ex suscipit neque consectetur, id hendrerit nibh blandit. Cras sem odio, commodo vitae dapibus in, tempor a ipsum. Donec eget lorem nec eros varius aliquet. Suspendisse ut porta dolor, id aliquam metus. Nam ac elementum ex.
-
-Nullam ullamcorper nisi elit, quis finibus tortor iaculis at. Curabitur euismod elit at orci finibus, et congue nibh vulputate. Vivamus gravida diam dapibus, pulvinar lacus at, malesuada diam. Donec placerat vulputate erat vel aliquam. Nulla vestibulum varius ligula vel fringilla. Vivamus blandit quis eros vel aliquet. Integer ac nibh ut magna tincidunt malesuada ornare scelerisque leo. Pellentesque lacinia vehicula ante, et viverra neque. Nam molestie arcu et congue venenatis. Nulla facilisi. Fusce elementum libero quis interdum faucibus. Nunc vulputate justo et libero sollicitudin vehicula. Nullam commodo ante quis iaculis tempor. Ut vitae massa orci. Ut enim est, pretium et turpis non, dictum tempus nisi.
-
-Aliquam sollicitudin neque nisl, at dictum lacus pellentesque sit amet. Fusce rutrum rutrum semper. Aenean sed posuere augue. Nam ac diam tempor, fringilla ante et, pharetra velit. Vestibulum tortor mauris, ullamcorper id nisi sit amet, tincidunt venenatis libero. Pellentesque porttitor mi nunc. Etiam ut risus aliquet risus sollicitudin dignissim in nec mauris. Nam porta est sit amet risus vestibulum dapibus. Vivamus tristique hendrerit turpis, vitae porttitor eros hendrerit non. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-
-Fusce auctor convallis purus eget vehicula. Quisque eu eros eu arcu aliquam interdum quis lacinia nulla. Aliquam porta est at sodales ultricies. Nullam at ullamcorper orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec vel tempor metus, vitae ultrices odio. Donec tristique odio nec condimentum hendrerit. Nunc finibus venenatis laoreet. Ut blandit quam vel odio vehicula condimentum. Donec pharetra libero eget est scelerisque dignissim pharetra at massa. Pellentesque sit amet dui in justo semper varius. Nam in dui mi.
-
-Maecenas a venenatis ex, eu mollis erat. Donec elit leo, bibendum in elit vel, dictum tincidunt lacus. Aliquam erat volutpat. Pellentesque interdum, orci porta sodales scelerisque, velit enim sollicitudin eros, at faucibus quam leo et nunc. Praesent tortor tellus, dignissim eu sapien et, congue tincidunt neque. In sagittis blandit orci, sit amet ornare nunc vestibulum nec. Vestibulum felis enim, gravida sed condimentum eget, maximus ac ligula. Donec ornare tortor at magna viverra semper pharetra eu est. Fusce maximus faucibus commodo. Nunc aliquam erat at bibendum lobortis. Proin suscipit nulla sit amet erat finibus elementum.
+        <center><div class="waveawesome" data-splitting><h1>Hello fellas welcome to my website</h1></div></center>
+        <h2>About me</h2>
+        <p>My name is Alex, but I go by <i>FoggyDude</i> on the internets :D</p>
+        <p class="rightAlign">I am a Ukrainian game developer and I also do other programming stuff.</p>
     </div>
+
+    <script>Splitting();</script>
 </body>
 </html>
