Starting get the hang of it
Added stuff to main page and started on the contacts

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
@@ -14,10 +17,18 @@
         <div id="gradient-overlay"></div>
     </div>
     <div id="mainstuff">
-        <center><div class="waveawesome" data-splitting><h1>Hello fellas welcome to my website</h1></div></center>
-        <h2>About me</h2>
-        <p>My name is Alex, but I go by <i>FoggyDude</i> on the internets :D</p>
-        <p class="rightAlign">I am a Ukrainian game developer and I also do other programming stuff.</p>
+        <center><div class="waveawesome" data-splitting><h1>! Hey guys welcome to my website !</h1></div></center>
+        <h2>< About me ></h2>
+        <p>My name is Alex, but I go by <em>FoggyDude</em> on the internets :D</p>
+        <p class="rightAlign"> I am a Ukrainian game developer but I also do other programming stuff... <b><mini>like this site</mini></b></p>
+        <p>I have been dabbling in programming and game devving as a hobby since 2022. It all started because I was bored one day.</p>
+        <p class="rightAlign">Check out my <a href="pages/socials/socials.html">socials</a> if you wanna!</p>
+
+        <h2 class="anotherOne">< My Games ></h2>
+        <p>I first started making games with Python and then moved to Godot Engine. Ever since then I've been mainly using Godot.</p>
+        <p class="rightAlign">Game development lets me make my weird ideas playable and I love it. Most of my projects are solo and I enjoy sharing them with the world!</p>
+        <b><center><p>Here is some of the games that I made: </p></center></b>
+
     </div>
 
     <script>Splitting();</script>
