--- a/index.html
+++ b/index.html
@@ -26,8 +26,35 @@
 
         <h2 class="anotherOne">< My Games ></h2>
         <p>I first started making games with Python and then moved to Godot Engine. Ever since then I've been mainly using Godot.</p>
-        <p class="rightAlign">Game development lets me make my weird ideas playable and I love it. Most of my projects are solo and I enjoy sharing them with the world!</p>
-        <b><center><p>Here is some of the games that I made: </p></center></b>
+        <p class="rightAlign">Game development lets me make my ideas become playable and I love it. Most of my projects are solo and I enjoy sharing them with the world!</p>
+        <b><center><p class="wavyText">Here is some of the games that I made: </p></center></b>
+        
+        <div class="gamesContainer">
+            <div class="gamebox">
+                <a href="https://foggydude.itch.io/strict-rules">
+                    <img class="thumbanail" src="assets/images/games/strictrules.png" alt="Strict Rule cover">
+                </a>
+            <p class="gameName">Strict Rules</p> 
+            <p class="gameDesc">Available for free</p>
+            </div>
+
+            <div class="gamebox">
+                <a href="https://foggydude.itch.io/lads-bus">
+                    <img class="thumbanail" src="assets/images/games/Ladsus.png" alt="Lads Bus   cover">
+                </a>
+            <p class="gameName">Lads Bus</p> 
+            <p class="gameDesc">Available for free</p>
+            </div>
+
+            <div class="gamebox">
+                <a href="https://foggydude.itch.io/the-cabin-a-scayr-game">
+                    <img class="thumbanail" src="assets/images/games/cabincover.png" alt="The Cabin cover">
+                </a>
+            <p class="gameName">The Cabin (scayr game)</p> 
+            <p class="gameDesc">Available for free...</p>
+            </div>
+
+        </div>
 
     </div>
 
