--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta content="FoggyDude Home" property="og:title">
+    <meta content="Check out my cool website on the internet" property="og:description">
+    <meta content="https://awesome-site.pages.dev" property="og:url">
+    <meta content="https://awesome-site.pages.dev/assets/images/hog.jpg" property="og:image">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
     </style>
