Hopefully optimized for mobile

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id="gradient-overlay"></div>
     </div>
     <div id="mainstuff">
+        <center><div class="waveawesomeSmall" data-splitting><h1>! Hey guys welcome !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! Hey guys welcome to my website !</h1></div></center>
         <h2>< About me ></h2>
         <p>My name is Alex, but I go by <em>FoggyDude</em> on the internets :D</p>
