testing mobile shit again

--- a/pages/socials/socials.html
+++ b/pages/socials/socials.html
@@ -6,19 +6,17 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Socials!</title>
+    <title>My Contacts!</title>
     <link rel="stylesheet" href="socials.css">
 </head>
 <body>
-    <div id="tile-container">
-        <div id="tile-pattern"></div>
-        <div id="gradient-overlay"></div>
-    </div>
-    <center><h1>My Business Card!</h1></center>
+    <div class="announcement">
+    <center><h1>My advertisment!</h1></center>
     <center><h4>aka my contacts</h4></center>
-    <div id="mainstuff">
-        <h2>This could be awesome....</h2>
+    </div>
 
+    <div class="card">
+        Please help
     </div>
 </body>
 </html>
