Updates and also i have a domain now lmao

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>My name is Alex, but I go by <em>FoggyDude</em> on the internets :D</p>
         <p class="rightAlign"> I am a Ukrainian game developer but I also do other programming stuff... <b><mini>like this site</mini></b></p>
         <p>I have been dabbling in programming and game devving as a hobby since 2022. It all started because I was bored one day.</p>
-        <p class="rightAlign">Check out my <a href="pages/socials/socials.html">contacts</a> if you wanna!</p>
+        <p class="rightAlign">Check out my <a href="socials.html">contacts</a> if you wanna!</p>
 
         <h2 class="anotherOne">< My Games ></h2>
         <p>I first started making games with Python and then moved to Godot Engine. Ever since then I've been mainly using Godot.</p>
