Socials kinda working

--- a/socials.html
+++ b/socials.html
@@ -27,7 +27,22 @@
         <h2>< Social medias ></h2>
         <p>Placeholder text</p>
         <h2 class="anotherOne">< Emails ></h2>
-        <p>Placeholder text</p>
+        <div class="SocialThing">
+            <a href="mailto:alex@foggydude.dev">
+                <img class="SocialIcon" src="assets/images/MailIcon.png" alt="mail icon">
+                alex@foggydude.dev
+            </a>
+            <p class="SocialName">My cool email</p>
+            <p class="SocialDesc">This is an email where you can send me all kinds of stuff. I do accept cat pics and stuff btw.</p>
+        </div>
+        <div class="SocialThing">
+            <a href="mailto:serious@foggydude.dev">
+                <img class="SocialIcon" src="assets/images/MailIcon.png" alt="mail icon">
+                serious@foggydude.dev
+            </a>
+            <p class="SocialName">My serious email</p>
+            <p class="SocialDesc">This is an email that very serious people can contact me with. I mean that seriously.</p>
+        </div>
         <h2>< Websites ></h2>
         <p>Placeholder text</p>
     </div>
