Contacts almost done

--- a/socials.html
+++ b/socials.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
+
+
     <meta content="FoggyDude Home" property="og:title">
     <meta content="Check out my cool website on the internet" property="og:description">
     <meta content="https://awesome-site.pages.dev" property="og:url">
@@ -11,7 +17,7 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoggyDude Home!</title>
+    <title>Contact FoggyDude!</title>
     <link rel="stylesheet" href="socials.css">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
@@ -25,17 +31,40 @@
         <center><div class="waveawesomeSmall" data-splitting><h1>! My Contacts !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! Ways to contact me !</h1></div></center>
         <h2>< Social medias ></h2>
-        <p>Placeholder text</p>
+        <div class="OrangeSocialThing">
+            <a href="https://twitter.com/FoggyDudey">
+                <img class="SocialIcon" src="assets/images/twitter.png" alt="twitter icon">
+                FoggyDudey
+            </a>
+            <p class="SocialName">My Twitter</p>
+            <p class="SocialDesc">Sometimes I post cool sneakpeeks and stuff like that on my twitter.</p>
+        </div>
+        <div class="OrangeSocialThing">
+            <a href="https://www.youtube.com/@foggydude">
+                <img class="SocialIcon" src="assets/images/Youtube.png" alt="youtube icon">
+                FoggyDudey
+            </a>
+            <p class="SocialName">My Youtube</p>
+            <p class="SocialDesc">Sometimes I post cool sneakpeeks and stuff like that on my twitter.</p>
+        </div>
+        <div class="OrangeSocialThing">
+            <a href="https://www.plurk.com/foggydude">
+                <img class="SocialIcon" src="assets/images/plurk.png" alt="plurk icon">
+                FoggyDude
+            </a>
+            <p class="SocialName">My Plurk</p>
+            <p class="SocialDesc">Plurk is one of the best social medias on the whole internet and you can't say its not.</p>
+        </div>
         <h2 class="anotherOne">< Emails ></h2>
-        <div class="SocialThing">
+        <div class="BlueSocialThing">
             <a href="mailto:alex@foggydude.dev">
                 <img class="SocialIcon" src="assets/images/MailIcon.png" alt="mail icon">
                 alex@foggydude.dev
             </a>
             <p class="SocialName">My cool email</p>
-            <p class="SocialDesc">This is an email where you can send me all kinds of stuff. I do accept cat pics and stuff btw.</p>
+            <p class="SocialDesc">This is an email where you can send me all kinds of stuff. I do accept cat pics and stuff.</p>
         </div>
-        <div class="SocialThing">
+        <div class="BlueSocialThing">
             <a href="mailto:serious@foggydude.dev">
                 <img class="SocialIcon" src="assets/images/MailIcon.png" alt="mail icon">
                 serious@foggydude.dev
