--- a/socials.html
+++ b/socials.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact FoggyDude!</title>
-    <link rel="stylesheet" href="socials.css">
+    <link rel="stylesheet" href="socials.css?v=1.3">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
