--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="main.css?v=1.3">
+    <link rel="stylesheet" href="main.css?v=1.4">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
@@ -27,6 +27,13 @@
         <div id="gradient-overlay"></div>
     </div>
     <div id="mainstuff">
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="socials.html">Contacts</a></li>
+            </ul>
+        </nav>  
+
         <center><div class="waveawesomeSmall" data-splitting><h1>! Hey guys welcome !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! Hey guys welcome to my website !</h1></div></center>
         <h2>< About me ></h2>
