--- a/socials.html
+++ b/socials.html
@@ -18,46 +18,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact FoggyDude!</title>
-    <link rel="stylesheet" href="socials.css?v=1.3">
+    <link rel="stylesheet" href="socials.css?v=1.4">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
+
 <body>
+
+
     <div id="tile-container">
         <div id="tile-pattern"></div>
         <div id="gradient-overlay"></div>
     </div>
     <div id="mainstuff">
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="socials.html">Contacts</a></li>
+            </ul>
+        </nav>  
+
         <center><div class="waveawesomeSmall" data-splitting><h1>! My Contacts !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! Ways to contact me !</h1></div></center>
         <h2>< Social medias ></h2>
         <div class="OrangeSocialThing">
-            <a href="https://twitter.com/FoggyDudey">
+            <a class="SocialLink" href="https://twitter.com/FoggyDudey">
                 <img class="SocialIcon" src="assets/images/twitter.png" alt="twitter icon">
-                FoggyDudey
+                @FoggyDudey
             </a>
-            <p class="SocialName">My Twitter</p>
-            <p class="SocialDesc">Sometimes I post cool sneakpeeks and stuff like that on my twitter.</p>
+            <p class="SocialName">Twitter</p>
+            <p class="SocialDesc">Sometimes I post cool sneakpeeks for my games and stuff like that on my twitter.</p>
         </div>
         <div class="OrangeSocialThing">
-            <a href="https://www.youtube.com/@foggydude">
+            <a class="SocialLink" href="https://www.youtube.com/@foggydude">
                 <img class="SocialIcon" src="assets/images/Youtube.png" alt="youtube icon">
-                FoggyDudey
+                @FoggyDude
             </a>
-            <p class="SocialName">My Youtube</p>
-            <p class="SocialDesc">Sometimes I post cool sneakpeeks and stuff like that on my twitter.</p>
+            <p class="SocialName">Youtube</p>
+            <p class="SocialDesc">I use YouTube to publish trailers for my games and just longer videos in general.    </p>
         </div>
         <div class="OrangeSocialThing">
-            <a href="https://www.plurk.com/foggydude">
+            <a class="SocialLink" href="https://www.plurk.com/foggydude">
                 <img class="SocialIcon" src="assets/images/plurk.png" alt="plurk icon">
-                FoggyDude
+                @FoggyDude
             </a>
-            <p class="SocialName">My Plurk</p>
+            <p class="SocialName">Plurk</p>
             <p class="SocialDesc">Plurk is one of the best social medias on the whole internet and you can't say its not.</p>
         </div>
         <h2 class="anotherOne">< Emails ></h2>
         <div class="BlueSocialThing">
-            <a href="mailto:alex@foggydude.dev">
+            <a class="SocialLink" href="mailto:alex@foggydude.dev">
                 <img class="SocialIcon" src="assets/images/MailIcon.png" alt="mail icon">
                 alex@foggydude.dev
             </a>
@@ -65,7 +75,7 @@
             <p class="SocialDesc">This is an email where you can send me all kinds of stuff. I do accept cat pics and stuff.</p>
         </div>
         <div class="BlueSocialThing">
-            <a href="mailto:serious@foggydude.dev">
+            <a class="SocialLink" href="mailto:serious@foggydude.dev">
                 <img class="SocialIcon" src="assets/images/MailIcon.png" alt="mail icon">
                 serious@foggydude.dev
             </a>
@@ -73,7 +83,22 @@
             <p class="SocialDesc">This is an email that very serious people can contact me with. I mean that seriously.</p>
         </div>
         <h2>< Websites ></h2>
-        <p>Placeholder text</p>
+        <div class="RedSocialThing">
+            <a class="SocialLink" href="https://foggydude.itch.io">
+                <img class="SocialIcon" src="assets/images/itch.png" alt="itch icon">
+                foggydude.itch.io
+            </a>
+            <p class="SocialName">Itch io page</p>
+            <p class="SocialDesc">Itch io is the platform where I have published all my games so far.</p>
+        </div>
+        <div class="RedSocialThing">
+            <a class="SocialLink" href="https://foggydude.dev">
+                <img class="SocialIcon" src="assets/images/website.png" alt="web icon">
+                foggydude.dev
+            </a>
+            <p class="SocialName">My cool and awesome website</p>
+            <p class="SocialDesc">This is the site you are on right now. Make sure to share it with your friends and family.</p>
+        </div>
     </div>
 
     <script>Splitting();</script>
