Working on cool page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="main.css?v=1.5">
+    <link rel="stylesheet" href="main.css?v=1.6">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
@@ -31,6 +31,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="socials.html">Contacts</a></li>
+                <li><a href="cool.html">Cool Stuff</a></li>
             </ul>
         </nav>  
 
@@ -38,13 +39,13 @@
         <center><div class="waveawesome" data-splitting><h1>! Hey guys welcome to my website !</h1></div></center>
         <h2>< About me ></h2>
         <p>My name is Alex, but I go by <em>FoggyDude</em> on the internets :D</p>
-        <p class="rightAlign"> I am a Ukrainian game developer but I also do other programming stuff... <b><mini>like this site</mini></b></p>
-        <p>I have been dabbling in programming and game devving as a hobby since 2022. It all started because I was bored one day.</p>
+        <p class="rightAlign"> I am a Ukrainian game developer but I also do other fun and cool stuff... <b><mini>like this site</mini></b></p>
+        <p>I have been dabbling in programming and game devving as a hobby since 2022. It all started because I was bored one day and my friend had a programming book.</p>
         <p class="rightAlign">Check out my <a href="socials.html">contacts</a> if you wanna!</p>
 
         <h2 class="anotherOne">< My Games ></h2>
-        <p>I first started making games with Python and then moved to Godot Engine. Ever since then I've been mainly using Godot.</p>
-        <p class="rightAlign">Game development lets me make my ideas become playable and I love it. Most of my projects are solo and I enjoy sharing them with the world!</p>
+        <p>I first started making games with Python and then moved to Godot Engine. Ever since that moment I've been mainly using Godot. Game development lets me make my ideas become playable and I love it.</p>
+        <p class="rightAlign">All my games are free any support is highly appreciated! My projects are mostly solo and I enjoy sharing them with the world.</p>
         <b><center><p class="wavyText">Here is some of the games that I made: </p></center></b>
         
         <div class="gamesContainer">
@@ -58,7 +59,7 @@
 
             <div class="gamebox">
                 <a href="https://foggydude.itch.io/lads-bus">
-                    <img class="thumbanail" src="assets/images/games/Ladsus.png" alt="Lads Bus   cover">
+                    <img class="thumbanail" src="assets/images/games/ladsbus.png" alt="Lads Bus   cover">
                 </a>
             <p class="gameName">Lads Bus</p> 
             <p class="gameDesc">Available for free</p>
@@ -71,8 +72,11 @@
             <p class="gameName">The Cabin (scayr game)</p> 
             <p class="gameDesc">Available for free...</p>
             </div>
-
         </div>
+
+        <center><p>For a full list of my games check out my <a href="https://foggydude.itch.io">itch.io page</a></p></center>
+
+        <p></p>
 
     </div>
 
