--- a/socials.html
+++ b/socials.html
@@ -7,9 +7,9 @@
     <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
 
 
-    <meta content="FoggyDude Home" property="og:title">
-    <meta content="Check out my cool website on the internet" property="og:description">
-    <meta content="https://awesome-site.pages.dev" property="og:url">
+    <meta content="Contact FoggyDude!" property="og:title">
+    <meta content="Check out my socials and other ways to contact me" property="og:description">
+    <meta content="https://awesome-site.pages.dev/socials" property="og:url">
     <meta content="https://awesome-site.pages.dev/assets/images/hog.jpg" property="og:image">
 
     <style>
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact FoggyDude!</title>
-    <link rel="stylesheet" href="socials.css?v=1.5">
+    <link rel="stylesheet" href="socials.css?v=1.6">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
@@ -35,6 +35,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="socials.html">Contacts</a></li>
+                <li><a href="cool.html">Cool Stuff</a></li>
             </ul>
         </nav>  
 
@@ -98,6 +99,14 @@
             </a>
             <p class="SocialName">My cool and awesome website</p>
             <p class="SocialDesc">This is the site you are on right now. Make sure to share it with your friends and family.</p>
+        </div>
+        <div class="RedSocialThing">
+            <a class="SocialLink" href="https://foggydude.neocities.org">
+                <img class="SocialIcon" src="assets/images/OldAss.png" alt="old icon">
+                foggydude.neocities.org
+            </a>
+            <p class="SocialName">Oh...</p>
+            <p class="SocialDesc">Thats my previous attempt at making a website for myself. It's pretty bad actually.</p>
         </div>
         <p></p>
     </div>
