Added cools stuff

--- a/cool.html
+++ b/cool.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Stuff!</title>
-    <link rel="stylesheet" href="cool.css?v=1.5">
+    <link rel="stylesheet" href="cool.css?v=1.6">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
@@ -43,9 +43,18 @@
         <center><div class="waveawesome" data-splitting><h1>! Cool Stuff that I made !</h1></div></center>
 
         <h2>< Hog Sender ></h2>
-        <p class="videoThing">
-            <iframeclass="video" width="560" height="315" src="https://www.youtube.com/embed/sPQvnyBaaKQ?si=UIgv-_fABxQLlAnY" title="YouTube video player"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
-        </p>
+
+        <p class="videoThing"><iframe width="560" height="315" src="https://www.youtube.com/embed/sPQvnyBaaKQ?si=5dhBCg14h8M1wKZq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+        <p><b>Hog Sender™</b> is an app that lets users send named hogs to each other.</p>
+        <p><b>The way it works:</b></p>
+        <ul class="myList">
+            <li>There are two roles: receivers and sender. Receivers are the ones that get the hogs from the Senders.</li>
+            <li>Pc clients get to choose between being a receiver or a sender. Android users only get to be the senders.</li>
+            <li>Senders have a button that lets them send hogs and a field to input their name into.</li>
+            <li>Once button is pressed, a hog with the senders name is sent to all active receivers.</li>
+        </ul>
+
+        <p>Hog Sender™ is not available for the public at this moment.</p>
 
     </div>
 
