--- a/cool.html
+++ b/cool.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Stuff!</title>
-    <link rel="stylesheet" href="cool.css?v=1.6">
+    <link rel="stylesheet" href="cool.css?v=1.7">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
@@ -32,6 +32,7 @@
     </div>
     <div id="mainstuff">
         <nav class="navbar">
+            <center><img src="assets/LogoLettersRender.png" alt="my log o"></center>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="socials.html">Contacts</a></li>
