--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="main.css?v=1.6">
+    <link rel="stylesheet" href="main.css?v=1.7">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
@@ -28,6 +28,7 @@
     </div>
     <div id="mainstuff">
         <nav class="navbar">
+            <center><img src="assets/LogoLettersRender.png" alt="my log o"></center>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="socials.html">Contacts</a></li>
@@ -75,6 +76,9 @@
         </div>
 
         <center><p>For a full list of my games check out my <a href="https://foggydude.itch.io">itch.io page</a></p></center>
+
+        <center><img src="assets/images/gremlin.png"><mini>this paticular web site was aproved by the little gremlin society of interweb<mini><img src="assets/images/gremlin.png"></center>
+        <center><mini>From Foggy: Thanks little gremlin society I love you guys<mini></center>
 
         <p></p>
 
