--- a/names.html
+++ b/names.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="main.css?v=1.7">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
-    <script src="names.js?v=1.4"></script>
+    <script src="names.js?v=1.5"></script>
 </head>
 <body onload = "fetchData()">
     <div id="tile-container">
@@ -43,6 +43,8 @@
 
         <p id="loading">LOADING</p>
         <p id="results"></p>
+
+        <p id="help" onmousedown="dragme()">some name</p>
 
         <p></p>
 
