--- a/submit.html
+++ b/submit.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="submit.css">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
-    <script src="submit.js"></script>
+    <script src="submit.js?v=1.1"></script>
 </head>
 <body>
     <div id="tile-container">
