--- a/names.html
+++ b/names.html
@@ -17,10 +17,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="main.css?v=1.7">
+    <link rel="stylesheet" href="names.css?v=1.0">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
-    <script src="names.js?v=2.4"></script>
+    <script src="names.js?v=2.5"></script>
 </head>
 <body onload = "fetchData()">
     <div id="tile-container">
@@ -37,15 +37,14 @@
             </ul>
         </nav>  
 
-        <center><div class="waveawesomeSmall" data-splitting><h1>! Hey guys welcome !</h1></div></center>
-        <center><div class="waveawesome" data-splitting><h1>! Hey guys welcome to my website !</h1></div></center>
-        <h2>< About me ></h2>
+        <center><div class="waveawesomeSmall" data-splitting><h1>! The People !</h1></div></center>
+        <center><div class="waveawesome" data-splitting><h1>! The People who left their name !</h1></div></center>
 
         <p id="loading">LOADING</p>
         <p id="results"></p>
 
-        <div id="div1">
-
+        <div id="namecontainer" class="namecontainer">
+            <p>Fucker</p>
         </div>
 
         <p></p>
