--- a/submit.html
+++ b/submit.html
@@ -47,7 +47,7 @@
             <ul>
             <li><button onmousedown="pressedcolor('#ed2450','red')" type="button" class="colorbutton" style="background-color: #ed2450;"></button><br><br></li>
             <li><button onmousedown="pressedcolor('#3178ea','blue')" type="button" class="colorbutton" style="background-color: #3178ea;"></button><br><br></li>
-             <li><button onmousedown="pressedcolor('#fafa4b','yellow')" type="button" class="colorbutton" style="background-color: #fafa4b;"></button><br><br></li>
+             <li><button onmousedown="pressedcolor('#fff700','yellow')" type="button" class="colorbutton" style="background-color: #fff700;"></button><br><br></li>
             <li><button onmousedown="pressedcolor('#40f685','green')" type="button" class="colorbutton" style="background-color: #40f685;"></button><br><br></li>
             <li><button onmousedown="pressedcolor('#bd4bed','purple')" type="button" class="colorbutton" style="background-color: #bd4bed;"></button><br><br></li>
             </ul>
