--- a/names.html
+++ b/names.html
@@ -17,10 +17,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="names.css?v=1.2">
+    <link rel="stylesheet" href="names.css?v=1.3">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
-    <script src="names.js?v=2.6"></script>
+    <script src="names.js?v=2.7"></script>
 </head>
 <body onload = "fetchData()">
     <div id="tile-container">
@@ -39,12 +39,12 @@
 
         <center><div class="waveawesomeSmall" data-splitting><h1>! The People !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! The People who left their name !</h1></div></center>
+        <center><mini>If you see some bad words and stuff here I'll try removing it later</mini></center>
 
         <p id="loading">LOADING</p>
         <p id="results"></p>
 
         <div id="namecontainer" class="namecontainer">
-
         </div>
 
         <p></p>
