I think it is done

--- a/cool.html
+++ b/cool.html
@@ -42,8 +42,23 @@
 
         <center><div class="waveawesomeSmall" data-splitting><h1>! Cool Stuff I made !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! Cool Stuff that I made !</h1></div></center>
+        <h2>< Name Leaver ></h2>
+        <p>I added the ability for people to leave their names on my website!</p>
+        <p><a class="coolpagelink" href="https://foggydude.dev/submit">The submission page</a></p>
+        <p><a class="coolpagelink" href="https://foggydude.dev/names">Names display page</a></p>
 
-        <h2>< Hog Sender ></h2>
+        <p><b>The way it works:</b></p>
+        <ul class="myList">
+            <li>Pretty much like a guest book.</li>
+            <li>People get to choose their name and their color on the submit page.</li>
+            <li>A post request is sent and the name+color are added to a database.</li>
+            <li>Another page on the site just displays all the names by fetching the database.</li>
+            <li>this took me way too long to make but it works :P</li>
+        </ul>
+
+        <p>Go leave your name!!!</p>
+
+        <h2 class="anotherOne">< Hog Sender ></h2>
 
         <p class="videoThing"><iframe width="560" height="315" src="https://www.youtube.com/embed/sPQvnyBaaKQ?si=5dhBCg14h8M1wKZq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
         <p><b>Hog Sender™</b> is an app that lets users send named hogs to each other.</p>
