--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="main.css?v=1.7">
+    <link rel="stylesheet" href="main.css?v=1.8">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
@@ -34,7 +34,8 @@
                 <li><a href="socials.html">Contacts</a></li>
                 <li><a href="cool.html">Cool Stuff</a></li>
             </ul>
-        </nav>  
+        </nav>
+        <marquee behavior="scroll" direction="left">!UPDATE!ㅤㅤㅤㅤㅤYou can now <a href="https://foggydude.dev/submit">submit your names</a> to displayㅤㅤㅤㅤㅤ!UPDATE!</marquee>
 
         <center><div class="waveawesomeSmall" data-splitting><h1>! Hey guys welcome !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! Hey guys welcome to my website !</h1></div></center>
