--- a/submit.html
+++ b/submit.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="submit.css">
+    <link rel="stylesheet" href="submit.css?v=1.1">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
     <script src="submit.js?v=1.1"></script>
