--- a/names.html
+++ b/names.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="names.css?v=1.5">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
-    <script src="names.js?v=3.1"></script>
+    <script src="names.js?v=3.2"></script>
 </head>
 <body onload = "fetchData()">
     <div id="tile-container">
@@ -39,6 +39,7 @@
 
         <center><div class="waveawesomeSmall" data-splitting><h1>! The People !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! The People who left their name !</h1></div></center>
+        <center><p><a class="coolpagelink" href="https://foggydude.dev/submit">The submission page</a></p></center>
         <center><mini>If you see some bad words and stuff here I'll try removing it later</mini></center>
 
         <p id="loading">LOADING</p>
