--- a/names.html
+++ b/names.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
 
     <meta content="Your Names" property="og:title">
-    <meta content="You can leave your name here" property="og:description">
+    <meta content="This page displays your names!" property="og:description">
     <meta content="https://awesome-site.pages.dev/names" property="og:url">
     <meta content="https://awesome-site.pages.dev/assets/images/hog.jpg" property="og:image">
 
