--- a/submit.html
+++ b/submit.html
@@ -6,9 +6,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
 
-    <meta content="Your Names" property="og:title">
-    <meta content="You can leave your name here" property="og:description">
-    <meta content="https://awesome-site.pages.dev/names" property="og:url">
+    <meta content="Submit Name" property="og:title">
+    <meta content="You can submit your name here" property="og:description">
+    <meta content="https://awesome-site.pages.dev/submit" property="og:url">
     <meta content="https://awesome-site.pages.dev/assets/images/hog.jpg" property="og:image">
 
     <style>
