--- a/submit.html
+++ b/submit.html
@@ -46,10 +46,13 @@
             <center><p class="formheading">Your color:</p></center>
             <ul>
             <li><button onmousedown="pressedcolor('#ed2450','red')" type="button" class="colorbutton" style="background-color: #ed2450;"></button><br><br></li>
+            <li><button onmousedown="pressedcolor('#15d1ee','cyan')" type="button" class="colorbutton" style="background-color: #15d1ee;"></button><br><br></li>
             <li><button onmousedown="pressedcolor('#3178ea','blue')" type="button" class="colorbutton" style="background-color: #3178ea;"></button><br><br></li>
-             <li><button onmousedown="pressedcolor('#fff700','yellow')" type="button" class="colorbutton" style="background-color: #fff700;"></button><br><br></li>
+            <li><button onmousedown="pressedcolor('#ff8c00','orange')" type="button" class="colorbutton" style="background-color: #ff8c00;"></button><br><br></li>
+            <li><button onmousedown="pressedcolor('#fff700','yellow')" type="button" class="colorbutton" style="background-color: #fff700;"></button><br><br></li>
             <li><button onmousedown="pressedcolor('#40f685','green')" type="button" class="colorbutton" style="background-color: #40f685;"></button><br><br></li>
             <li><button onmousedown="pressedcolor('#bd4bed','purple')" type="button" class="colorbutton" style="background-color: #bd4bed;"></button><br><br></li>
+            <li><button onmousedown="pressedcolor('#f648cd','pink')" type="button" class="colorbutton" style="background-color: #f648cd;"></button><br><br></li>
             </ul>
             <center><p id="selectedcolor" class="colortext">Selected color is red</p></center>
 
