--- a/names.html
+++ b/names.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="names.css?v=1.5">
+    <link rel="stylesheet" href="names.css?v=1.6">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
     <script src="names.js?v=3.2"></script>
@@ -46,6 +46,7 @@
         <p id="results"></p>
 
         <div id="namecontainer" class="namecontainer">
+            <p>Fucker</p>
         </div>
 
         <p></p>
