added notes and images

--- a/cool.html
+++ b/cool.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Stuff!</title>
-    <link rel="stylesheet" href="cool.css?v=1.7">
+    <link rel="stylesheet" href="cool.css?v=1.8">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
 </head>
@@ -43,9 +43,9 @@
         <center><div class="waveawesomeSmall" data-splitting><h1>! Cool Stuff I made !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! Cool Stuff that I made !</h1></div></center>
         <h2>< Name Leaver ></h2>
-        <p>I added the ability for people to leave their names on my website!</p>
-        <p><a class="coolpagelink" href="https://foggydude.dev/submit">The submission page</a></p>
-        <p><a class="coolpagelink" href="https://foggydude.dev/names">Names display page</a></p>
+        <p>I added the ability for people to leave their names on my website! I did this for fun and it was pretty fun yeah.</p>
+        <p><a class="coolpagelink" href="https://foggydude.dev/submit"><img src="assets/images/submissiongraphic.png">The submission page</a></p>
+        <p><a class="coolpagelink" href="https://foggydude.dev/names"><img src="assets/images/displaygraphic.png">Names display page</a></p>
 
         <p><b>The way it works:</b></p>
         <ul class="myList">
