--- a/submit.html
+++ b/submit.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoggyDude Home!</title>
-    <link rel="stylesheet" href="submit.css?v=1.1">
+    <link rel="stylesheet" href="submit.css?v=1.2">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
     <script src="submit.js?v=1.2"></script>
@@ -43,6 +43,10 @@
         <div class="inputstuff">
             <center><p class="formheading">Your username:</p></center>
             <center><input maxlength="16" class="nameInput" type="text" id="uname"><br><br></center>
+            <div class="footnotes">
+                <center><p class="smaller">Your name will be visible for everyone so please dont put your real name</p></center>
+                <center><p class="smaller">For removal requests mail me at alex@foggydude.dev</p></center>
+            </div>
             <center><p class="formheading">Your color:</p></center>
             <ul>
             <li><button onmousedown="pressedcolor('#ed2450','red')" type="button" class="colorbutton" style="background-color: #ed2450;"></button><br><br></li>
@@ -57,6 +61,10 @@
             <center><p id="selectedcolor" class="colortext">Selected color is red</p></center>
 
             <center><button onmousedown="submitAll()" type="button" class="submitShit">Submit your stuff!</button><br><br></center>
+        </div>
+        
+        <div class="footnotes">
+            <center><p><a href="https://foggydude.dev/names">The display page</a></p></center>
         </div>
     
     </div>
