--- a/cool.html
+++ b/cool.html
@@ -44,15 +44,15 @@
         <center><div class="waveawesome" data-splitting><h1>! Cool Stuff that I made !</h1></div></center>
         <h2>< Name Leaver ></h2>
         <p>I added the ability for people to leave their names on my website! I did this for fun and it was pretty fun yeah.</p>
-        <p><a class="coolpagelink" href="https://foggydude.dev/submit"><img src="assets/images/submissiongraphic.png">The submission page</a></p>
-        <p><a class="coolpagelink" href="https://foggydude.dev/names"><img src="assets/images/displaygraphic.png">Names display page</a></p>
+        <p><a class="coolpagelink" href="https://foggydude.dev/submit"><img src="assets/images/submissiongraphic.png"><p>Submission page</p> </a></p>
+        <p><a class="coolpagelink" href="https://foggydude.dev/names"><img src="assets/images/displaygraphic.png"><p>Names display page</p> </a></p>
 
         <p><b>The way it works:</b></p>
         <ul class="myList">
             <li>Pretty much like a guest book.</li>
             <li>People get to choose their name and their color on the submit page.</li>
             <li>A post request is sent and the name+color are added to a database.</li>
-            <li>Another page on the site just displays all the names by fetching the database.</li>
+            <li>Another page on the site just displays all the names by fetching stuff from the database.</li>
             <li>this took me way too long to make but it works :P</li>
         </ul>
 
